examples/kubeflow-mlops/kubeflow-manifests/tests/unit-tests/awsconfigs/common/istio-ingress/overlays/api/test_data/expected/~g_v1_configmap_istio-ingress-api.yaml
apiVersion: v1
data:
  certArn: ""
  httpHeaderName: x-api-key
  httpHeaderValues: '["token1", "token2"]'
  loadBalancerScheme: internet-facing
kind: ConfigMap
metadata:
  annotations: {}
  labels:
    kustomize.component: istio-ingress
  name: istio-ingress-api
  namespace: istio-system
